[package]
name = "ctf-packet-relay"
version = "0.1.0"
edition = "2021"
authors = ["Jon Lamb <jon@auxon.io>"]
description = "Relays CTF packets from a serial device or socket to one or more LTTng relayd sessions"
repository = "https://github.com/auxoncorp/ctf-packet-relay"
license-file = "LICENSE"

[[bin]]
name = "ctf-packet-relay"
path = "src/main.rs"

[lib]
name = "ctf_packet_relay"
path = "src/lib.rs"

[dependencies]
tokio-serial = "5.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "net", "fs", "signal", "tracing"] }
tokio-util = { version = "0.6.9", features = ["codec", "net"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.1"
thiserror = "1.0"
babeltrace2-sys = "0.2"
hostname = "0.3"
derive_more = "0.99"
url = "2.2"
socket2 = "0.4"
structopt = { version = "0.3", features = ["color"] }
ctrlc = { version = "3.2", features=["termination"] }

[profile.release]
strip="debuginfo"

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/release/ctf-packet-relay", "usr/bin/", "755"],
]
